# ros_chainercv

./: .travis.rosinstall  .travis.rosinstall.melodic  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  fc.rosinstall  package.xml  requirements.in  requirements.txt  setup.py
.github/workflows/: main.yml
docker/cpu/: Dockerfile
docker/cpu/hooks/: build
docker/cuda/: Dockerfile
docker/cuda/hooks/: build
docker/kinetic/: Dockerfile
docker/kinetic-cuda100/: Dockerfile
docker/kinetic-cuda80/: Dockerfile
docker/kinetic-cuda90/: Dockerfile
docker/kinetic-cuda91/: Dockerfile
docker/kinetic-cuda92/: Dockerfile
docker/melodic/: Dockerfile
docker/melodic-cuda100/: Dockerfile
docker/melodic-cuda92/: Dockerfile
launch/: instance_segmentation.launch  object_detection.launch  semantic_segmentation.launch  ssd_object_detection.launch
node_scripts/: deeplab_semantic_segmentation.py  faster_rcnn_fpn_object_detection.py  faster_rcnn_object_detection.py  fcis_instance_segmentation.py  instance_segmentation.py  mask_rcnn_fpn_instance_segmentation.py  object_detection.py  pspnet_semantic_segmentation.py  semantic_segmentation.py  ssd_object_detection.py  yolo_object_detection.py
python/ros_chainercv/: __init__.py  instance_segmentation_node.py  object_detection_node.py  semantic_segmentation_node.py
sample/: sample_deeplab_semantic_segmentation.launch  sample_faster_rcnn_fpn_object_detection.launch  sample_faster_rcnn_object_detecton.launch  sample_fcis_instance_segmentation.launch  sample_instance_segmentation.launch  sample_mask_rcnn_fpn_instance_segmentation.launch  sample_object_detection.launch  sample_pspnet_semantic_segmentation.launch  sample_semantic_segmentation.launch  sample_ssd_object_detection.launch  sample_yolo_object_detection.launch
sample/include/: sample_task.xml
scripts/: install_pretrained_models.py
test/: test_deeplab_semantic_segmentation_node.test  test_deeplab_v3plus_xception65_semantic_segmentation.test  test_faster_rcnn_fpn_node.test  test_faster_rcnn_fpn_object_detection_node.test  test_faster_rcnn_fpn_resnet101_object_detection.test  test_faster_rcnn_fpn_resnet50_object_detection.test  test_faster_rcnn_object_detection_node.test  test_faster_rcnn_vgg16_object_detection.test  test_fcis_instance_segmentation_node.test  test_fcis_resnet101_instance_segmentation.test  test_instance_segmentation.xml  test_mask_rcnn_fpn_instance_segmentation_node.test  test_mask_rcnn_fpn_resnet101_instance_segmentation.test  test_mask_rcnn_fpn_resnet50_instance_segmentation.test  test_object_detection.xml  test_pspnet_resnet101_semantic_segmentation.test  test_pspnet_resnet50_semantic_segmentation.test  test_pspnet_semantic_segmentation_node.test  test_semantic_segmentation.xml  test_ssd300_object_detection.test  test_ssd512_object_detection.test  test_ssd_object_detection_node.test  test_yolo_object_detection_node.test  test_yolo_v2_object_detection.test  test_yolo_v2_tiny_object_detection.test  test_yolo_v3_object_detection.test
test/include/: test_instance_segmentation.xml  test_instance_segmentation_node.xml  test_object_detection.xml  test_object_detection_node.xml  test_semantic_segmentation.xml  test_semantic_segmentation_node.xml
yaml/: ade20k_semantic_segmentation_label_names.yaml  cityscapes_semantic_segmentation_label_names.yaml  coco_bbox_label_names.yaml  voc_bbox_label_names.yaml
